# MCMC_Deprojection

./: README.md  channeling.py  combine.c  dechanneling.py  fit.py  header.py  main.c  main.py  makefile  mock_spectra_deprojection.py  norm_to_density.py  norm_to_density_projct.py  nulsen.py  nulsen_recovery.py  pha_file_maker.py  pha_to_dat.py  plot.gn  plot.py  projct_fitting.py  readme.txt  rename_file.c  spec_deproj.py
MCMC_Deprojection-Analysis-of-recovered-density-temperature/: avg_spectra.c  combine.c  nlfit.m  readme.txt
MCMC_Deprojection-Analysis-of-recovered-density-temperature/codes/: arrays.c  fit_poly.c  head.h  mrqmin.c~
codes/: MC2.c  avg_values.c  calculate_avg_values.c  create_data.c  head.h~  mrqcof.c~  tcool.c
cooltables/: arrange_files.m
